update Dapper, DevExpress
* update Dapper 2.1.28
* update DevExpress 23.2
* BuildingLeaseDataManager.Library 프로젝트에서 DevExpress 참조 제거

--- a/수정사항.md
+++ b/수정사항.md
@@ -7,6 +7,11 @@
 
 # [수정사항]
 
+# 24.01.27
+* update Dapper 2.1.28
+* update DevExpress 23.2
+* BuildingLeaseDataManager.Library 프로젝트에서 DevExpress 참조 제거
+
 # 23.12.21
 * 프로시저 수정:
 * spAccountCode_IsUsed.sql
