--- a/수정사항.md
+++ b/수정사항.md
@@ -7,6 +7,9 @@
 
 # [수정사항]
 
+# 24.02.02
+* update DevExpress 23.2.3 -> 23.2.4
+
 # 24.01.30
 * LoginForm: BackgroundImageLayout = Stretch (폰트크기 변경하면 이미지도 변경된다.)
 
