update CashBook, MaintenanceFeeDetailsModule, spCashBook_GetPreviousAmountByDate.sql 수정
* CashBook(금전출납부): 합계의 이월금 수정 및 Count = 추가
* CashBook(금전출납부): 거래일자, 통장, 임차인 컨트롤 사이즈 조정
* CashBook, MaintenanceFeeDetailsModule : 통장 컨트롤 : BestFitMode = BestFitResizePopup 수정
* spCashBook_GetPreviousAmountByDate.sql 수정
* Script.BuildingLease_Database.sql 수정

--- a/수정사항.md
+++ b/수정사항.md
@@ -7,6 +7,15 @@
 
 # [수정사항]
 
+# 24.02.23
+* CashBook(금전출납부): 합계의 이월금 수정 및 Count = 추가
+	* 이월금 계산: 2024-01-01년부터 사용시 2024-01-01이전에 입력된 "전년도 이월금(AccountCodeId: 5, 9)"은 이월금 계산에 포함하며, 수입액은 제외한다.
+	* 입금액 계산: 2024-01-01이전에 입력된 수입은 입금액에서 제외요청 -> 프로그램상 안되어서 -> 조회기간을 선택할 때 2024-01-01 전과 후로 선택하도록 함.
+* CashBook(금전출납부): 거래일자, 통장, 임차인 컨트롤 사이즈 조정
+* CashBook, MaintenanceFeeDetailsModule : 통장 컨트롤 : BestFitMode = BestFitResizePopup 수정
+* spCashBook_GetPreviousAmountByDate.sql 수정
+* Script.BuildingLease_Database.sql 수정
+
 # 24.02.02
 * update DevExpress 23.2.3 -> 23.2.4
 
