update 금액표시 잘리는 것 수정,  LogFilePath 위치 변경
* CashBookModule, LeaseContractModule 의 금액표시 잘리는 것 수정
* update Dapper
* LogFilePath 위치를 C:\Users\사용자명\AppData\Roaming\프로젝트명\Log로 변경

--- a/수정사항.md
+++ b/수정사항.md
@@ -6,6 +6,25 @@
 * 신규모드 인지 표시?
 
 # [수정사항]
+# 24.03.19
+* CashBookModule, IncomingsBookModule, LeaseContractModule 의 금액표시 잘리는 것 수정
+	* TextEdit 및 Decimal 변수 초기화(= 0 -> = 0m 로 변경): (=0의 경우 1,000,000,000까지 표시됨)
+	* depositTextEdit.EditValue = 0m;
+	* e.TotalValue = 0m;
+	* private decimal _previousAmount = 0m;
+	* decimal sumDepositAmount = 0m;
+* 금전출납부 금액 입력 단위 변경 : 10억 단위 -> 100억 단위
+
+* 건물호실코드 - 기타조정(사업장) - 숭조당 수입 삭제시 
+	* '이미 사용되었으므로 삭제할 수 없습니다.' 라는 팝업이 뜹니다.
+	* => 임대차 계약에서 숭조당 수입을 삭제 후 건물호실코드에서 삭제하면 됩니다.
+* update Dapper
+* LogFilePath 위치를 C:\Users\사용자명\AppData\Roaming\프로젝트명\Log로 변경
+
+# 24.03.09
+* Script.PostDeployment.sql: 처음 설치 data query
+* Script.PostDeployment_20240305.sql: 20240305 정제된 data query
+* BuildingLease_1st_basedata_backup.zip: 20240305 정제된 data 백업
 
 # 24.02.23
 * CashBook(금전출납부): 합계의 이월금 수정 및 Count = 추가
