--- a/수정사항.md
+++ b/수정사항.md
@@ -6,6 +6,8 @@
 * 신규모드 인지 표시?
 
 # [수정사항]
+# 25.02.25
+* Update DevExpress 23.2 -> 24.2.5
 # 24.03.19
 * CashBookModule, IncomingsBookModule, LeaseContractModule 의 금액표시 잘리는 것 수정
 	* TextEdit 및 Decimal 변수 초기화(= 0 -> = 0m 로 변경): (=0의 경우 1,000,000,000까지 표시됨)
