--- a/수정사항.md
+++ b/수정사항.md
@@ -6,8 +6,25 @@
 * 신규모드 인지 표시?
 
 # [수정사항]
+# 25.03.06
+* DevExpress.Tutorials.v24.2 참조는 실무에서 사용하면 안된다.
+* Modules의 UserControl의 상속을 DevExpress.DXperience.Demos.TutorialControlBase 에서 DevExpress.XtraEditors.XtraUserControl로 변경
+* 
+* update: Optimize LoadModuleAsync method for improved performance and UI thread safety	
+	- Add AddControlToContainerAsync and BringControlToFrontAsync method
+	- Add RunOnUIThreadAsync method to safely perform actions on the UI thread
+* refactor: Change User Control Modules 'inheritance from TutorialControlBase to XtraUserControl'
+* Remove reference to DevExpress.Tutorials.v24.2
+* Add ExportTo method to InvoiceListModule
+* Add MainFormHelper class
+
+# 25.03.04
+* fix GetCurrentMenuItem() in MainForm
+* add SetCurrentMenuItem() in MainForm
+ 
 # 25.02.25
 * Update DevExpress 23.2 -> 24.2.5
+
 # 24.03.19
 * CashBookModule, IncomingsBookModule, LeaseContractModule 의 금액표시 잘리는 것 수정
 	* TextEdit 및 Decimal 변수 초기화(= 0 -> = 0m 로 변경): (=0의 경우 1,000,000,000까지 표시됨)
