--- a/수정사항.md
+++ b/수정사항.md
@@ -17,6 +17,7 @@
 * Remove reference to DevExpress.Tutorials.v24.2
 * Add ExportTo method to InvoiceListModule
 * Add MainFormHelper class
+* update DropDownArrowStyle property of ExportDropDownButton to InvoiceListModule
 
 # 25.03.04
 * fix GetCurrentMenuItem() in MainForm
